# crypto_trading

./: .gitignore  README.md  package-lock.json  package.json  server.js
cpp-backend/: CMakeLists.txt
cpp-backend/include/: coinbase_api.h  gemini_api.h  kraken_api.h  order_book.h
cpp-backend/src/: coinbase_api.cpp  gemini_api.cpp  kraken_api.cpp  main.cpp  order_book.cpp
exchange-simulator/: package.json  server.js
public/: index.html  orderbook.html  orderbook.js  script.js  stocks.html  stocks.js  styles.css  trade.html  trade.js
solana-tokenizer/apple_stock_tokenizer/: Anchor.toml  Cargo.toml
solana-tokenizer/apple_stock_tokenizer/programs/apple_stock_tokenizer/: Cargo.toml
solana-tokenizer/apple_stock_tokenizer/programs/apple_stock_tokenizer/src/: lib.rs
solana-tokenizer/apple_stock_tokenizer/tests/: apple_stock_tokenizer.js
